<resources>
    <string name="app_name">PassLive</string>
    <string name="Btn_Access">Acceder</string>
    <string name="Txt_Other_Procedure">Touch ID</string>
    <string name="Btn_Biometric_Login">Acceder con huella</string>
    <string name="option_all">Todos los registros</string>
    <string name="option_web">Cuentas Web</string>
    <string name="option_bank">Cuentas Bancarias</string>
    <string name="option_card">Tarjetas de crédito</string>
    <string name="option_setting">Ajustes</string>
    <string name="option_follow">Síguenos</string>
    <string name="option_exit">Salir</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="save_password">Guardar</string>
    <string name="menu_Record_number">Número de registros</string>
    <string name="menu_Record_seach">Buscar registros</string>
    <string name="menu_Order_record">Ordenar registros</string>
    <string name="add_password">Agregar</string>
    <string name="Txt_D_Tittle">Título:</string>
    <string name="D_Tittle">--</string>
    <string name="Txt_D_Account">Cuenta: </string>
    <string name="D_Account">--</string>
    <string name="Txt_D_Username">Nombre de usuario: </string>
    <string name="D_Username">--</string>
    <string name="Txt_D_Password">Contraseña: </string>
    <string name="D_Password">--</string>
    <string name="Txt_D_Websites">Sitio web: </string>
    <string name="D_Websites"></string>
    <string name="Txt_D_Note">Notas: </string>
    <string name="D_Note">--</string>
    <string name="Txt_D_RecordTime">Tiempo de registro: </string>
    <string name="D_RecordTime">--</string>
    <string name="Txt_D_UpdateTime">Tiempo de actualización: </string>
    <string name="D_UpdateTime">--</string>
    <string name="Txt_B_Title">Título:</string>
    <string name="B_Title">--</string>
    <string name="Txt_B_Bank">Banco: </string>
    <string name="B_Bank">--</string>
    <string name="Txt_B_Account_Name">Titular de la cuenta:  </string>
    <string name="B_Account_Name">--</string>
    <string name="Txt_B_Number">Número de cuenta bancaria:  </string>
    <string name="B_Number"></string>
    <string name="Txt_B_Websites">Sitio web: </string>
    <string name="B_Websites"></string>
    <string name="Txt_B_Note">Notas: </string>
    <string name="B_Note">--</string>
    <string name="Txt_B_RecordTime">Tiempo de registro: </string>
    <string name="B_RecordTime">--</string>
    <string name="Txt_B_UpdateTime">Tiempo de actualización: </string>
    <string name="B_UpdateTime">--</string>
    <string name="Txt_C_Title">Título:</string>
    <string name="C_Title">--</string>
    <string name="Txt_C_Name">Nombre del titular:  </string>
    <string name="C_Name">--</string>
    <string name="Txt_C_Number">Número de tarjeta:  </string>
    <string name="C_Number">--</string>
    <string name="Txt_C_Date">Fecha de caducidad:  </string>
    <string name="C_Date"></string>
    <string name="Txt_C_CVC">Código de seguridad:  </string>
    <string name="C_CVC">--</string>
    <string name="Txt_C_Note">Notas: </string>
    <string name="C_Note">--</string>
    <string name="Txt_C_RecordTime">Tiempo de registro: </string>
    <string name="C_RecordTime">--</string>
    <string name="Txt_C_UpdateTime">Tiempo de actualización: </string>
    <string name="C_UpdateTime">--</string>
    <string name="EtTittle">Título (Obligatorio)</string>
    <string name="EtAccount">Cuenta</string>
    <string name="EtUsername">Nombre de usuario</string>
    <string name="EtPassword">Contraseña</string>
    <string name="EtWebsites">Sitio Web</string>
    <string name="EtNote">Nota</string>
    <string name="Btn_W_Image">Adjuntar imagen</string>
    <string name="Et_B_Title">Título (Obligatorio)</string>
    <string name="Et_B_Bank_name">Nombre de banco</string>
    <string name="Et_B_Account_name">Titular de la cuenta</string>
    <string name="Et_B_Number_Bank">Número de cuenta bancaria</string>
    <string name="Et_B_Websites">Sitio Web</string>
    <string name="Et_B_Note">Nota</string>
    <string name="Btn_B_Image">Adjuntar imagen</string>
    <string name="Et_C_Title">Título (Obligatorio)</string>
    <string name="Et_C_Name">Nombre del titular</string>
    <string name="Et_C_Number_Card">Número de tarjeta</string>
    <string name="Et_C_Date">Fecha de caducidad</string>
    <string name="Et_C_CVC">Código de seguridad</string>
    <string name="Et_C_Note">Nota</string>
    <string name="Btn_C_Image">Adjuntar imagen</string>
    <string name="Item_tittle">Título</string>
    <string name="Item_account">Cuenta</string>
    <string name="Item_username">Nombre de usuario</string>
    <string name="Item_password">Contraseña</string>
    <string name="Item_websites">Sitio web</string>
    <string name="Item_note">Nota</string>
    <string name="Item_b_tittle">Título</string>
    <string name="Item_b_bank">Banco</string>
    <string name="Item_b_account_name">Titular de la cuenta</string>
    <string name="Item_b_number">Número de cuenta bancaria</string>
    <string name="Item_b_websites">Sitio web</string>
    <string name="Item_b_note">Nota</string>
    <string name="Item_c_tittle">Título</string>
    <string name="Item_c_account_name">Nombre del titular</string>
    <string name="Item_c_number">Número de tarjeta</string>
    <string name="Item_c_date">Fecha de caducidad</string>
    <string name="Item_c_cvc">Codigo de seguridad</string>
    <string name="Item_c_note">Nota</string>
    <string name="Item_g_title">Título</string>
    <string name="Item_g">--</string>
    <string name="Txt_web">Registros de aplicaciones web: </string>
    <string name="Total_web">--</string>
    <string name="Txt_bank">Registros de cuentas bancarias: </string>
    <string name="Total_bank">--</string>
    <string name="Txt_card">Registros de tarjetas de crédito:</string>
    <string name="Total_card">--</string>
    <string name="TxtTotal">Total de registros: </string>
    <string name="Total">--</string>
    <string name="Fully_Undertood">Entendido</string>
    <string name="Btn_edit_record">Editar</string>
    <string name="Btn_delete_record">Eliminar</string>
    <string name="Txt_Question">¿Estás seguro(a) de eliminar todos los registros?</string>
    <string name="Btn_Yes">Sí, estoy de acuerdo</string>
    <string name="Btn_Cancel">Cancelar</string>
    <string name="Btn_close_image">Cerrar</string>
    <string name="Txt_Password">Su contraseña es:</string>
    <string name="Password__">----</string>
    <string name="New_Password">Nueva contraseña</string>
    <string name="Confirm_Password">Confirma contraseña</string>
    <string name="Btn_Change_password">Cambiar</string>
    <string name="Btn_Cancel_Password">Cancelar</string>
    <string name="Et_Email">E-mail</string>
    <string name="Et_UserPassword">Contraseña</string>
    <string name="Et_ConfirmPassword">Confirmar contraseña</string>
    <string name="Btn_Category">Categorias</string>
    <string name="Btn_New">Nuevos</string>
    <string name="Btn_Past">Antiguos</string>
    <string name="Btn_Asc">A-Z</string>
    <string name="Btn_Desc">Z-A</string>
    <string name="txt_Option">Selecciona una opción</string>
    <string name="Btn_Order_Web">Cuentas de Sitios Web</string>
    <string name="Btn_Order_Bank">Cuentas bancarias</string>
    <string name="Btn_Order_Card">Tarjetas de crédito</string>
    <string name="Txt_Setting">Ajustes</string>
    <string name="Delete_All_Record">Eliminar todos los registros</string>
    <string name="Export_File">Exportar archivo CSV</string>
    <string name="Import_File">Importar archivo CSV</string>
    <string name="Btn_Registration">Registrar</string>
    <string name="Change_Password">Cambiar password</string>
    <string name="Btn_Web">Cuentas de Sitios Web</string>
    <string name="Btn_Bank">Cuentas bancarias</string>
    <string name="Btn_Card">Tarjetas de crédito</string>
    <string name="Txt_follow">Síguenos:</string>
    <string name="id_proff">ca-app-pub-3940256099942544~3347511713</string>
    <string name="id_production">ca-app-pub-2936215461830489~5293704997</string>
    <string name="title_activity_detail_record">Detail_record</string>
    <string name="privacy_policy_text">Política de privacidad</string>
    <string name="Cb_accept_term">Aceptar los términos</string>
    <string name="Btn_accept">Aceptar</string>
</resources>