<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_Record_seach"
        android:title="@string/menu_Record_seach"
        android:icon="@drawable/icon_seach"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/menu_Order_record"
        android:title="@string/menu_Order_record"
        android:icon="@drawable/icon_order_record"
        app:showAsAction="ifRoom"
        />
<item
    android:id="@+id/menu_Record_number"
    android:title="@string/menu_Record_number"
    android:icon="@drawable/icon_record_number"
    app:showAsAction="ifRoom">

</item>
</menu>