<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_item_password"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/icon_password"
        android:layout_centerVertical="true"
        android:padding="8dp"/>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_toEndOf="@+id/img_item_password"
    android:layout_toStartOf="@id/ImgB_option"
    android:layout_marginStart="3dp">
    
    <TextView
        android:id="@+id/Item_tittle"
        android:text="@string/Item_tittle"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="#7ed957"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/Item_account"
        android:text="@string/Item_account"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Item_username"
        android:text="@string/Item_username"
        android:textSize="15dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Item_password"
        android:text="@string/Item_password"
        android:textSize="15dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Item_websites"
        android:text="@string/Item_websites"
        android:textSize="15dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Item_note"
        android:text="@string/Item_note"
        android:textSize="15dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ImgB_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/icon_option"
        android:clickable="true"
        android:nextFocusUp="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@null"/>
</RelativeLayout>
</androidx.cardview.widget.CardView>