<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#fff">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="120dp"

        android:layout_gravity="center"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="record_all.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

        //Registros web
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp">

            <TextView
                android:text="@string/Txt_web"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Total_web"
                android:text="@string/Total_web"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        //Registros banco
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp">

            <TextView
                android:text="@string/Txt_bank"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Total_bank"
                android:text="@string/Total_web"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        //Registros tarjetas
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp">

            <TextView
                android:text="@string/Txt_card"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Total_card"
                android:text="@string/Total_card"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp">

        <TextView
            android:text="@string/TxtTotal"
            android:textSize="22sp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Total"
            android:text="@string/Total"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/BtnFully_Undertood"
        android:text="@string/Fully_Undertood"
        android:textColor="#fff"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        app:cornerRadius = "20dp"
        app:strokeColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
