<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="12dp">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="order.json"
        app:lottie_autoPlay="true"/>
    //Nuevos
    <Button
        android:id="@+id/Btn_New"
        android:text="@string/Btn_New"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Btn_Past"
        android:text="@string/Btn_Past"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Btn_Asc"
        android:text="@string/Btn_Asc"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Btn_Desc"
        android:text="@string/Btn_Desc"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>