<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="8dp">

    <Button
        android:id="@+id/Btn_Web"
        android:text="@string/Btn_Web"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/icon_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Btn_Bank"
        android:text="@string/Btn_Bank"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/icon_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Btn_Card"
        android:text="@string/Btn_Card"
        android:textStyle="bold"

        android:textColor="#ffffff"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableLeft="@drawable/icon_card"
        />
</androidx.appcompat.widget.LinearLayoutCompat>